--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^9.6.5",
+    "movie-trailer": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-button": "^0.7.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-youtube": "^7.14.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
